--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,11 @@ pytest = "6.2.4"
 cookiecutter = "^1.7.3"
 pytz = "2021.1"
 python-slugify = "5.0.2"
-Pillow = "8.2.0"
+Pillow = "^8.2.0"
 argon2-cffi = "20.1.0"
 whitenoise = "5.2.0"
 redis = "3.5.3"
-uvicorn = {version = "0.14.0", extras = ["standard"]}
+#uvicorn = {version = "0.14.0", extras = ["standard"]}
 django-environ = "0.4.5"
 django-model-utils = "4.1.1"
 django-allauth = "0.44.0"
