--- a/src/superlists/.gitignore
+++ b/src/superlists/.gitignore
@@ -156,6 +156,10 @@ typings/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
 
 
 # Provided default Pycharm Run/Debug Configurations should be tracked by git
@@ -319,9 +323,10 @@ Session.vim
 tags
 
 ### Project template
-
 superlists/media/
 
 .pytest_cache/
-
-
+.ipython/
+.env
+.envs/*
+!.envs/.local/
