Clean up and getting pytest to work on docker

--- a/src/superlists/local.yml
+++ b/src/superlists/local.yml
@@ -23,6 +23,13 @@ services:
       - "8000:8000"
     command: /start
 
+  selenium:
+    image: selenium/standalone-chrome:latest
+    ports:
+    - "4444:4444"
+    - "7900:7900"
+    shm_size: 2gb
+
   postgres:
     build:
       context: .
